# astrolog

./: .env  .gitignore  .prettierignore  LICENSE  LICENSE.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.github/: release.yml
.github/workflows/: release.yml
example_jsons/: configuration.json  equipment.json  equipment_list.json  image_list.json  imagingFrames.json  imagingSessions.json  imaging_frame_list.json  imaging_session_list.json  preferences.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/src/: classify.rs  file_store.rs  file_system.rs  frontend_actions.rs  image.rs  main.rs  paths.rs  setup.rs  state.rs
src-tauri/src/commands/: calibration.rs  equipment.rs  gallery.rs  image.rs  imaging_sessions.rs  mod.rs  preferences.rs  state.rs  utils.rs
src-tauri/src/file_stores/: configuration_store.rs  equipment_store.rs  imaging_frames_store.rs  imaging_sessions_store.rs  mod.rs  preferences_store.rs
src-tauri/src/frontend_actions/: calibration.rs  gallery.rs  imaging_sessions.rs  mod.rs  preferences.rs  state.rs  utils.rs
src-tauri/src/models/: configuration.rs  database.rs  equipment.rs  gallery_image_list.rs  image.rs  image_list.rs  imaging_frames.rs  imaging_session.rs  imaging_session_list.rs  log.rs  mod.rs  preferences.rs  state.rs
src-tauri/src/models/equipment/: camera.rs  filter.rs  flattener.rs  mount.rs  telescope.rs
src-tauri/src/models/frontend/: analytics.rs  mod.rs  process.rs  state.rs
src-tauri/src/models/imaging_frames/: bias_frame.rs  calibration_frame.rs  calibration_type.rs  dark_frame.rs  flat_frame.rs  imaging_frame.rs  imaging_frame_list.rs  light_frame.rs  mod.rs
src-tauri/src/services/: mod.rs  setup.rs  state.rs
src-tauri/src/utils/: file_system.rs  mod.rs  paths.rs
src/app/: globals.css  layout.module.scss  layout.tsx  page.module.scss  page.tsx  svgs.tsx
src/app/analytics/: analytics.module.scss  analytics.tsx
src/app/calibration/: calibration.tsx  page.tsx
src/app/equipment/: equipment.module.scss  equipment.tsx  page.tsx
src/app/gallery/: gallery.module.scss  gallery.tsx
src/app/log/: log.module.scss  log.tsx
src/components/: EquipmentListView.tsx  bottomBar.tsx  equipmentDetails.module.scss  equipmentDetails.tsx  equipmentListView.module.scss  equipmentListView.tsx  headerCard.module.scss  headerCard.tsx  imageView.module.scss  imageView.tsx  sideNav.module.scss  sideNav.tsx  topBar.module.scss  topBar.tsx
src/components/analytics/: equipmentChart.tsx  equipmentMonthlyUsage.tsx  infoCard.tsx  integrationChart.tsx  sessionsChart.tsx
src/components/astrophotographyLog/: astrophotographyLog.module.scss  astrophotographyLog.tsx  dataTable.tsx
src/components/bars/: bottomBar.module.scss  bottomBar.tsx  sideNav.module.scss  sideNav.tsx  topBar.module.scss  topBar.tsx
src/components/charts/: equipmentChart.module.scss  equipmentChart.tsx  integrationChart.tsx  sessionsChart.tsx
src/components/equipment/: equipmentDetails.module.scss  equipmentDetails.tsx  equipmentListView.module.scss  equipmentListView.tsx
src/components/fileSelectors/: fileListSelector.module.scss  fileListSelector.tsx  fileSelector.tsx
src/components/images/: imageGallery.module.scss  imageGallery.tsx  imageGalleryView.module.scss  imageGalleryView.tsx  imagePreview.module.scss  imagePreview.tsx  imageRenderer.tsx
src/components/modals/: calibrationRowEditor.module.scss  calibrationRowEditor.tsx  license.tsx  preferences.module.scss  preferences.tsx  rootDirectory.tsx  selectImagingFrames.tsx  setupAstrolog.tsx
src/components/sessionTable/: calibrationColumns.tsx  columns.tsx  logTable.module.scss  logTable.tsx  sessionTable.tsx  (+2 more)
src/context/: modalProvider.tsx  processProvider.tsx  stateProvider.tsx
src/enums/: calibrationType.ts  equipmentType.ts  unit.ts  unitSystem.ts
src/interfaces/: analytics.ts  commands.ts  equipment.ts  imagingSessionEdit.ts  process.ts  state.ts
src/public/: svgs.tsx
src/schemas/: equipmentSchema.ts  imagingSessionSchema.ts
src/utils/: browser.ts  equipment.ts  units.ts
(+93 files in other folders)
