[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.123", features = ["derive"] }
tauri-plugin-keygen = { git = "https://github.com/bagindo/tauri-plugin-keygen", branch = "v2" }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
tauri = { version = "2", features = [ "protocol-asset"] }
once_cell = "1.19.0"
winapi = { version = "0.3.9", features = ["winnt", "fileapi"] }
webbrowser = "1.0.1"
open = "5.3.0"
kamadak-exif = "0.5.5"
dotenv = "0.15.0"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
