[package]
name = "AstroLog"
version = "0.2.0"
description = "AstroLog is an astrophotography application that lets you log and classify all your imaging sessions - by its own or manually."
authors = ["Rouven Spaar"]
license = "Grayjay Core License 1.0"
repository = "https://github.com/astrolog-app/astrolog"
default-run = "AstroLog"
edition = "2021"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
tauri-plugin-keygen = { git = "https://github.com/bagindo/tauri-plugin-keygen", branch = "v2" }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
tauri = { version = "2.3.0", features = [ "protocol-asset"] }
winapi = { version = "0.3.9", features = ["winnt", "fileapi"] }
webbrowser = "1.0.3"
open = "5.3.2"
kamadak-exif = "0.6.1"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-window-state = "2.2.1"
tauri-plugin-log = "2.2.2"
log = "0.4.26"
regex = "1.11.1"
chrono = { version = "0.4.40", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
